--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -93,6 +93,9 @@ $unit-lrg: 3rem;
 $unit-xl: 6rem;
 $global-border: $unit-sml;
 $shadow: 1px 1px 6px rgba(0,0,0,0.15);
+
+$article-width: 60ch;
+$wide-width: 90ch;
 $align-wide: $unit-lrg calc(15% - 15vw);
 
 // BREAKPOINTS
