--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -30,6 +30,8 @@ p {
     line-height: 1.6;
 }
 
+article p { font-size: 20px; }
+
 ul, ol {
     margin-left: 1em;
     line-height: 1.25;
